opam-version: "2.0"
name: "brr"
synopsis: "Browser programming toolkit for OCaml"
description: """\
Brr is a toolkit for programming browsers in OCaml with the
[`js_of_ocaml`][jsoo] compiler. It provides:

* Interfaces to a selection of browser APIs.
* An OCaml console developer tool for live interaction 
  with programs running in web pages.
* A JavaScript FFI for idiomatic OCaml programming.

Brr is distributed under the ISC license. It depends on the
`js_of_ocaml` compiler and runtime – but not on its libraries or
syntax extension.

[jsoo]: https://ocsigen.org/js_of_ocaml

Homepage: <https://erratique.ch/software/brr>"""
maintainer: "Daniel Bünzli <daniel.buenzl i@erratique.ch>"
authors: "The brr programmers"
license: ["ISC" "BSD-3-Clause"]
tags: ["reactive" "declarative" "frp" "front-end" "browser" "org:erratique"]
homepage: "https://github.com/dune-universe/brr"
bug-reports: "https://github.com/dbuenzli/brr/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "topkg" {build & >= "1.0.3"}
  "js_of_ocaml-compiler" {>= "5.5.0"}
  "js_of_ocaml-toplevel" {>= "5.5.0"}
  "dune" {>= "2.8"}
]
build: [ "dune" "build" "-p" name "-j" jobs "@install" "@runtest" {with-test} ]
dev-repo: "git+https://github.com/dune-universe/brr.git"
