(library
 (foreign_stubs
  (language c)
  (names realpath))
 (name irmin_watcher)
 (public_name irmin-watcher)
 (libraries
  fmt
  lwt
  logs
  astring
  (select
   backend.ml
   from
   (cf-lwt fsevents-lwt -> backend.fsevents.ml)
   (inotify.lwt -> backend.inotify.ml)
   (lwt.unix -> backend.polling.ml))
  (select
   backend.mli
   from
   (cf-lwt fsevents-lwt -> backend.fsevents.mli)
   (inotify.lwt -> backend.inotify.mli)
   (lwt.unix -> backend.polling.mli))))
