(rule
 (deps (glob_files *.md) %{bin:slipshow})
 (aliases runtest)
 (mode promote)
 (action
   (run %{bin:slipshow} compile cdl.md)))

(rule
 (deps (glob_files *.md) %{bin:slipshow})
 (target cdl.html)
 (aliases examples)
 (mode promote)
 (action
   (run %{bin:slipshow} compile cdl.md)))

(rule
 (deps (universe))
 (aliases runtest examples)
 (action
  (progn
   (bash "echo See \"Campus du libre\" at:")
   (bash "echo \"   file://$PWD/cdl.html\"")
   (bash "echo "))))
