(rule
 (deps (glob_files *.md) (glob_files *.draw) (glob_files *.mp4) (glob_files *.png) (glob_files *.svg) (glob_files *.pdf) %{bin:slipshow})
 (aliases runtest)
 (action
   (run %{bin:slipshow} compile doc.md)))

(rule
 (deps (glob_files *.md) (glob_files *.draw) (glob_files *.mp4) (glob_files *.png) (glob_files *.svg) (glob_files *.pdf) %{bin:slipshow})
 (target doc.html)
 (aliases examples)
 (mode promote)
 (action
   (run %{bin:slipshow} compile doc.md)))

(rule
 (deps (universe))
 (aliases runtest examples)
 (action
  (progn
   (bash "echo See \"Edge of your documentation\" at:")
   (bash "echo \"   file://$PWD/doc.html\"")
   (bash "echo "))))
