(rule
 (deps
  (glob_files *.md)
  (glob_files *.draw)
  (glob_files *.mp4)
  (glob_files *.png)
  (glob_files *.svg)
  (glob_files *.pdf)
  %{bin:slipshow})
 (target main.html)
 (aliases examples)
 (mode promote)
 (action
  (run %{bin:slipshow} compile main.md)))

(rule
 (deps (universe))
 (aliases examples)
 (action
  (progn
   (bash "printf \"See FunOCaml 2025 at:\n   file://$PWD/main.html\""))))
