(executable
 (public_name slipshow)
 (name main)
 (flags
  (-cclib
   /usr/local/opt/libffi/lib/libffi.a
   -cclib
   /usr/local/opt/openssl@3/lib/libssl.a
   -cclib
   /usr/local/opt/openssl@3/lib/libcrypto.a
   -cclib
   /usr/local/opt/libev/lib/libev.a
   :standard))
 (libraries
  slipshow_server
  cmdliner
  fpath
  logs.cli
  fmt.cli
  fmt.tty
  logs.fmt
  themes))
