(executable
 (modes js)
 (name main)
 (libraries communication brr normalization browser rescale table_of_content undoable step universe drawing))

(rule
 (action
  (copy main.bc.js slipshow.js)))

(rule
 (action
  (with-stdout-to slipshow.css
   (progn
    (cat normalization/normalization.css)
    (cat rescale/rescale.css)
    (cat themes/default.css)
    (cat universe/universe.css)
    (cat step/step.css)
    (cat drawing/drawing.css)
    (cat table_of_content/table_of_content.css)
))))
