; (rule
;  (deps %{project_root}/staged_dist/slipshow.cdn.min.js)
;  (target "slipshow.cdn.min.js.crunch")
;  (enabled_if
;   (= %{profile} "with-bundle"))
;  (mode promote)
;  (action
;   (copy %{deps} %{target})))

; (rule
;  (deps %{project_root}/staged_dist/css/slip.css)
;  (target "slip.css.crunch")
;  (enabled_if
;   (= %{profile} "with-bundle"))
;  (mode promote)
;  (action
;   (copy %{deps} %{target})))

; (rule
;  (deps %{project_root}/staged_dist/css/theorem.css)
;  (target "theorem.css.crunch")
;  (enabled_if
;   (= %{profile} "with-bundle"))
;  (mode promote)
;  (action
;   (copy %{deps} %{target})))

; (rule
;  ; This needs to be mathjax version 3, as mathjax 4 has changed its build
;  ; process and does not include a "full" variant with all extensions.
;  (deps %{project_root}/node_modules/mathjax/es5/tex-svg-full.js)
;  (target "tex-svg-full.js.crunch")
;  (enabled_if
;   (= %{profile} "with-bundle"))
;  (mode promote)
;  (action
;   (copy %{deps} %{target})))

; (rule
;  (target "tailwindcss.js")
;  (enabled_if
;   (= %{profile} "with-bundle"))
;  (mode promote)
;  (action
;   (run
;     wget
;     --output-document
;     tailwindcss.js
;     https://cdn.tailwindcss.com)))

; warning: node modules are not managed by dune
; to generate a new bundle one should run `npm install` before the first build
; The bundle is only re-generated if the profile is `with-bundle`
; If you add new javascript dependency or update the package.json
; you should run `dune build --profile=with-bundle`

(rule
 (aliases runtest data-files)
 (deps
  (:x data_contents.ml)
  (glob_files *.crunch))
 (enabled_if
  (= %{profile} "with-bundle"))
 (action
  (progn
   (setenv
    SOURCE_DATE_EPOCH
    0
    (run ocaml-crunch . -e crunch -o %{x}.corrected -m plain -s))
   (diff? %{x} %{x}.corrected))))

(library
 (name data_files)
 (public_name slipshow.datafiles)
 (preprocess
  (pps ppx_blob))
 (preprocessor_deps
  ../engine/pdf-support/pdf_support.bc.js
  ../engine/scheduler/scheduler.bc.js
  ../../logo/favicon.ico
  ../engine/runtime/slipshow.js
  ../engine/runtime/slipshow-internal.css
  ../engine/runtime/slipshow-system.css)
 (wrapped false))
