(executable
 (modes js)
 (name main)
 (libraries
  communication
  brr
  normalization
  browser
  rescale
  table_of_content
  undoable
  step
  universe
  drawing
  drawing_editor
  messaging
  fast
  mouse_disappearing))

(rule
 (action
  (copy main.bc.js slipshow.js)))

(rule
 (action
  (with-stdout-to
   slipshow-internal.css
   (progn
    (cat normalization/normalization.css)
    (cat rescale/rescale.css)
    (cat universe/universe.css)
    (cat step/step.css)))))

(rule
 (action
  (with-stdout-to
   slipshow-system.css
   (progn
    (cat drawing/drawing.css)
    (cat drawing_editor/drawing_editor.css)
    (cat table_of_content/table_of_content.css)
    (cat system.css)))))
