(library
 (name highlightjs)
 (public_name slipshow.highlightjs))

(rule
 (aliases highlightjs)
 (deps
  (:x highlightjs.ml)
  (glob_files_rec data/*)
 )
 (action
  (progn
   (setenv
    SOURCE_DATE_EPOCH
    0
    (run ocaml-crunch data/ -o %{x}.corrected -m plain -s))
   (diff? %{x} %{x}.corrected))))
